// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset render / none 1`] = `
<body>
  <div>
    <label
      style="display: flex; align-items: center; margin-bottom: 12px; opacity: 1;"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="testing"
          type="radio"
          value="one"
        />
      </div>
      <span
        class="sc-3299cdd2-0 iHfbvZ"
      />
      one
    </label>
    <label
      style="display: flex; align-items: center; margin-bottom: 12px; opacity: 1;"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="testing"
          type="radio"
          value="two"
        />
      </div>
      <span
        class="sc-3299cdd2-0 iHfbvZ"
      />
      two
    </label>
  </div>
</body>
`;

exports[`Fieldset render / selected 1`] = `
<body>
  <div>
    <label
      style="display: flex; align-items: center; margin-bottom: 12px; opacity: 1;"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          checked=""
          name="testing"
          type="radio"
          value="one"
        />
      </div>
      <span
        class="sc-3299cdd2-0 KzrSU"
      />
      one
    </label>
    <label
      style="display: flex; align-items: center; margin-bottom: 12px; opacity: 1;"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="testing"
          type="radio"
          value="two"
        />
      </div>
      <span
        class="sc-3299cdd2-0 iHfbvZ"
      />
      two
    </label>
  </div>
</body>
`;
